# uhoh

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  update_notes.txt
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: timemachine.html
src/: cas.rs  cli.rs  compaction.rs  config.rs  daemon.rs  db.rs  diff_view.rs  emergency.rs  encoding.rs  event_ledger.rs  gc.rs  git.rs  ignore_rules.rs  lib.rs  main.rs  marker.rs  mcp_app.rs  mcp_protocol.rs  mcp_stdio.rs  mcp_tools.rs  notifications.rs  operations.rs  platform.rs  project_service.rs  resolve.rs  restore.rs  restore_guards.rs  restore_runtime.rs  runtime_bundle.rs  snapshot.rs  subsystem.rs  transport_security.rs  update.rs  util.rs  watcher.rs
src/agent/: audit.rs  commands.rs  fanotify.rs  intercept.rs  mcp_proxy.rs  mod.rs  profiles.rs  proxy.rs  runtime.rs  sandbox.rs  undo.rs
src/ai/: README  llama.rs  mlx.rs  mlx_update.rs  mod.rs  models.rs  queue.rs  sidecar.rs  sidecar_update.rs  summary.rs
src/commands/: git.rs  ledger.rs  mod.rs  operations.rs  project.rs  runtime.rs  shared.rs
src/compaction/: engine.rs  mod.rs
src/daemon/: emergency.rs  maintenance.rs  notifications.rs  runtime.rs  snapshots.rs  watch_event.rs  watcher.rs
src/db/: agents.rs  ai_queue.rs  guards.rs  ledger.rs  migrations.rs  operations.rs  projects.rs  schema.rs  schema.sql  schema_v1.sql  schema_v4.sql  schema_v5.sql  schema_v6.sql  schema_v7.sql  search.rs  snapshots.rs  types.rs
src/db_guard/: commands.rs  credentials.rs  crypto_policy.rs  mod.rs  mysql.rs  postgres.rs  postgres_connection.rs  postgres_monitoring.rs  recovery.rs  sqlite.rs  sqlite_guard.rs
src/events/: mod.rs  publisher.rs  server_event.rs
src/mcp/: application.rs  http.rs  mod.rs  protocol.rs  stdio.rs  tools.rs
src/restore/: guards.rs  mod.rs  runtime.rs
src/server/: api.rs  auth.rs  events.rs  mcp.rs  mod.rs  restore_guards.rs  transport_security.rs  ws.rs
src/storage/: compaction.rs
tests/: integration.rs  integration_tests.rs  phase0_subsystems.rs
