[package]
name = "uhoh"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Local filesystem snapshots — ctrl-z for AI agents"
license = "MIT"
repository = "https://github.com/fluffypony/uhoh"

[[bin]]
name = "uhoh"
path = "src/main.rs"

[lib]
name = "uhoh"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Filesystem watching
notify = "8.2"

# .gitignore parsing (ripgrep engine)
ignore = "0.4"

# Hashing
blake3 = "1.6"

# Base58 encoding
bs58 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"

# Diffing
similar = { version = "2.7", features = ["unicode"] }

# Syntax highlighting (lazy-loaded)
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# HTTP client (for AI sidecar + updates)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# DNS resolution (supplementary update verification)
hickory-resolver = { version = "0.25", features = ["tokio"] }

# Battery detection
battery = "0.7"

# System info (RAM, CPU)
sysinfo = "0.33"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Binary self-replacement
self-replace = "1.5"

# Directories
dirs = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite (replaces flat TOML manifests for atomicity + concurrency)
rusqlite = { version = "0.31", features = ["bundled"] }

# Ed25519 signature verification for updates
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Progress bars
indicatif = "0.17"

# Semantic versioning for updates
semver = "1.0"

# Cross-platform file locking (removed)

# Windows path canonicalization
dunce = "1.0"

# Binary file detection
content_inspector = "0.2"

# Random bytes for marker generation
getrandom = "0.2"

# Hex encoding
hex = "0.4"

# Lazy statics
once_cell = "1.0"

# Optional zstd compression (off by default, per spec preference)
zstd = { version = "0.13", optional = true }

# Reflink (copy-on-write) support for tiered blob storage
reflink-copy = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "processthreadsapi", "handleapi", "psapi"] }

[features]
default = []
compression = ["zstd"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
